// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableDataTable component EditableDataTable handles canAddNewLine with onNewLine 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="gds-typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="gds-field-group"
            >
              <span
                class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="gds-button-content gds-table-new-line"
      color="primary"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Add row
      </div>
    </button>
  </div>
</div>
`;

exports[`EditableDataTable component EditableDataTable handles canAddNewLine without onNewLine 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="gds-typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="gds-field-group"
            >
              <span
                class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="gds-button-content gds-table-new-line"
      color="primary"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        Add row
      </div>
    </button>
  </div>
</div>
`;

exports[`EditableDataTable component EditableDataTable handles change, onRowDelete and onRowDownload 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="gds-typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="gds-typography table--header-value--title center ellipsis"
                title="Actions"
              >
                Actions
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="gds-field-group"
            >
              <input
                class="gds-amount-field"
                data-testid="DATA-TEST-ID-Number-0"
                inputmode="numeric"
                name="number"
                type="text"
                value="1"
              />
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            >
              <button
                class="gds-button-content"
                color="reversed"
                data-testid="DATA-TEST-ID-delete"
                tabindex="0"
                type="button"
              >
                <div
                  class="button-icon-container"
                >
                  <i
                    class="button-icon icon"
                    icon="fal,trash-alt"
                  />
                </div>
              </button>
              <div>
                Delete
              </div>
              <div>
                <div>
                  ControlleMenu
                  closed
                  <div
                    class="gds-popover-container"
                  >
                    <div
                      class="popover-title"
                    >
                      Delete?
                    </div>
                    <div
                      class="popover-buttons"
                    >
                      <button
                        class="gds-button-content"
                        color="secondary"
                        data-testid="cancel"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          class="button-label-container"
                        >
                          Cancel
                        </div>
                      </button>
                      <button
                        class="gds-button-content"
                        color="primary"
                        data-testid="confirm"
                        tabindex="0"
                        type="button"
                      >
                        <div
                          class="button-label-container"
                        >
                          Confirm
                        </div>
                      </button>
                    </div>
                  </div>
                  has ref
                </div>
              </div>
              <button
                class="gds-button-content"
                color="reversed"
                data-testid="DATA-TEST-ID-download"
                tabindex="0"
                type="button"
              >
                <div
                  class="button-icon-container"
                >
                  <i
                    class="button-icon icon"
                    icon="fal,arrow-down-to-line"
                  />
                </div>
              </button>
              <div>
                Download
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`EditableDataTable component EditableDataTable handles onRowDelete and onRowDownload with custom localization 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="gds-typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="gds-typography table--header-value--title center ellipsis"
                title="actionColumn"
              >
                actionColumn
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="gds-field-group"
            >
              <input
                class="gds-amount-field"
                inputmode="numeric"
                name="number"
                type="text"
                value="1"
              />
            </div>
          </td>
          <td
            class=""
          >
            <div
              class="table--cell--value--button"
            />
          </td>
        </tr>
      </tbody>
    </table>
    <button
      class="gds-button-content gds-table-new-line"
      color="primary"
      tabindex="0"
      type="button"
    >
      <div
        class="button-label-container"
      >
        addRow
      </div>
    </button>
  </div>
</div>
`;

exports[`EditableDataTable component EditableDataTable handles sort 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value table--header-value--sortable"
              tabindex="0"
            >
              <span
                class="gds-typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
              <span
                class="table--header-value--sorter"
              >
                <i
                  class="icon"
                  icon="fas,sort"
                />
              </span>
            </div>
            <div>
              Click to sort
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="gds-field-group"
            >
              <span
                class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`EditableDataTable component EditableDataTable renders 1`] = `
<div>
  <div>
    <table
      class="gds-table"
    >
      <thead>
        <tr>
          <th
            class=""
          >
            <div
              class="table--header-value"
              tabindex="-1"
            >
              <span
                class="gds-typography table--header-value--title right ellipsis"
                title="Number"
              >
                Number
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class=""
          tabindex="-1"
        >
          <td
            class=""
          >
            <div
              class="gds-field-group"
            >
              <span
                class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                id="number"
                name="number"
              >
                1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
